# CleanShare

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  nightly-desktop.yml
apps/desktop_tauri/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop_tauri/src/: main.ts  styles.css
apps/desktop_tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop_tauri/src-tauri/icons/: icon.icns
apps/desktop_tauri/src-tauri/src/: main.rs
apps/web_demo/: index.html  package-lock.json  package.json
apps/web_demo/src/: main.ts  styles.css
crates/link_cleaner_core/: Cargo.toml
crates/link_cleaner_core/src/: lib.rs
crates/link_cleaner_uniffi/: Cargo.toml
crates/link_cleaner_uniffi/scripts/: generate-bindings.sh
crates/link_cleaner_uniffi/src/: lib.rs
crates/link_cleaner_wasm/: Cargo.toml
crates/link_cleaner_wasm/src/: lib.rs
