[workspace]
members = [
  "crates/link_cleaner_core",
  "crates/link_cleaner_wasm",
  "crates/link_cleaner_uniffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["clean-share contributors"]

[workspace.dependencies]
link_cleaner_core = { path = "crates/link_cleaner_core" }
regex = "1.11"
url = "2.5"
wasm-bindgen = "0.2"
uniffi = "0.29"
